<resources>
    <string name="app_name">Water Reminder</string>
    <array name="title_activity_main">Water Reminder</array>
    <string name="water">Water</string>
    <string name="logo">logo</string>
    <string name="desc">It is like drinking a glass of water</string>
    <string name="welcome">Welcome, </string>

    <string name="textViewFacebook">OR</string>

    <string name="facebook_app_id">1465490360419578</string>

    <string name="username">Username</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="e_mail">E-Mail</string>
    <string name="email_address">E-Mail Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="sex">Sex</string>

    <string name="daily_water">Daily Water</string>
    <string name="water_goal">Daily Water Goal</string>


    <string name="title">Title</string>

    <!-- Activities -->
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_login">Water Reminder</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_base_adapter">BaseAdapter</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_country">CountryActivity</string>


    <!-- Registration and Profile -->
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="age">Age</string>
    <string name="fullName">Full Name</string>
    <string name="nickname">Nickname</string>


    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- Navigation Drawer Part -->
    <string name="openDrawer">openDrawer</string>
    <string name="closeDrawer">closeDrawer</string>

    <!-- Buttons -->
    <string name="clear">Clear</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="country">Please select your country</string>
    <string name="email">Enter your email</string>


    <!-- Main Part -->
    <string name="water_consumption">Water Consumption:</string>
    <string name="cup">cups</string>
    <string name="default_cup">1 cup</string>
    <string name="snackbar_water_supply">water supply is added</string>
    <string name="snackbar_water_supply_delete">water supply is deleted</string>
    <string name="snackbar_water_add_fail">Water supply could not be added! Please try again</string>


    <!-- Devs Name -->
    <string name="team_0">Kuray OGUN</string>
    <string name="team_1">Oguz BASARAN</string>

    <!-- Devs Job List -->
    <string name="team_0_job">Founder * Developer * Designer</string>
    <string name="team_1_job">Developer</string>

    <!-- Devs Social Links -->
    <string name="team_0_facebook">https://www.facebook.com/WrathChaos</string>
    <string name="team_0_twitter">https://twitter.com/FreakyCoderCom</string>
    <string name="team_0_linkedin">https://tr.linkedin.com/pub/kuray-öğün/43/80b/755</string>
    <string name="team_0_github">https://github.com/WrathChaos</string>

    <string name="team_1_facebook">https://www.facebook.com/people/O%C4%9Fuz-Ali-Ba%C5%9Faran/680348705</string>
    <string name="team_1_twitter">https://www.twitter.com/oguzalibasaran</string>
    <string name="team_1_linkedin">https://www.linkedin.com/pub/o%C4%9Fuz-ali-ba%C5%9Faran/108/873/114</string>
    <string name="team_1_github">https://github.com/zybzy</string>

    <!-- Water Reminder Notifications -->
    <string name="notify_title">Time to drink water!</string>
    <string name="notify_text">Eğer su kaynağı senin kendi ruhundan fışkırmazsa, susuzluğunu dindiremezsin.</string>

    <!-- Register Part -->
    <string name="info">Information</string>
    <string name="got_info">Got It !</string>
    <string name="signUp">Sign Up to control your water consumption !</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="title_activity_main">RegisterMainActivity</string>
    <string name="title_activity_register_third">RegisterThirdActivity</string>


    <!-- Profile Part -->
    <string name="profile_name">Profile Name</string>
    <string name="change_username">Change Username</string>
    <string name="current_daily_goal">Current Daily Goal : </string>
    <string name="change_daily_goal">Change Your Current Daily Goal</string>
    <string name="new_value">Enter your new value</string>

    <string name="goal_changed_success">Your water goal is changed successfully</string>
    <string name="goal_changed_failed"> Water goal cannot be less than 1
                                        and more than 35</string>
    <string name="name_changed_success">Your username is changed successfully</string>
    <string name="name_changed_failed">Please enter a valid username</string>
    <string name="average">Average</string>
    <string name="days">days</string>
    <string name="total_days">Total Days</string>
    <string name="total_water_cons">Total Water Consumption</string>
    <string name="achievement_error">* Achievement part is not functional yet.</string>


    <!-- Graphs -->
    <string name="tographs">GRAPHS</string>
    <string name="title_activity_deneme">deneme</string>

    <!-- Custom DialogBox Graph Hint -->
    <string name="hint">Hint</string>
    <string name="hint1">Everyday Minimum : 8 Cups</string>
    <string name="hint2">1 Bottle = 3 Cups</string>
    <string name="hint3">1 Carboy = 80 Cups</string>
    <string name="note1">* These are approximate values</string>

</resources>
