<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_background_reverse"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_status_bar"
    tools:context="com.water.waterreminder.ProfileActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/ic_back"
            android:onClick="backButton" />

        <ImageView
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/ic_fav_red" />
    </RelativeLayout>




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/profile_name"
        android:textColor="@color/primary_trans"
        android:id="@+id/profile_name"
        android:layout_below="@+id/relativeLayout"
        android:layout_marginStart="10dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/name_change"
        android:onClick="name_change"
        android:background="@drawable/ic_edit"
        android:layout_alignTop="@+id/profile_name"
        android:layout_toEndOf="@+id/profile_name"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="3dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/current_daily_goal"
        android:layout_marginStart="10dp"
        android:textColor="@color/primary_trans"
        android:id="@+id/current_daily_goal"
        android:layout_below="@+id/profile_name"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:id="@+id/current_daily_goal_value"
        android:text="20"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/mySkyRedLight"
        android:textStyle="bold"
        android:layout_alignTop="@+id/current_daily_goal"
        android:layout_toEndOf="@+id/current_daily_goal"
        android:layout_marginLeft="3dp" />



    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/daily_goal_change"
        android:onClick="daily_goal_change"
        android:background="@drawable/ic_edit"
        android:layout_alignTop="@+id/current_daily_goal_value"
        android:layout_toEndOf="@+id/current_daily_goal_value"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="3dp" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_statistic"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/current_daily_goal"
        android:layout_alignParentEnd="true"
        android:overScrollMode="never"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/achievement_error"
        android:layout_below="@+id/recycler_view_statistic"
        android:gravity="right"
        android:textSize="12sp"
        android:textColor="@color/divider"

        />

</RelativeLayout>
