<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mCoordinatorLayout"
    android:background="@color/myWhite"
    tools:context="com.water.waterreminder.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/anchor"
        android:layout_height="match_parent">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        android:background="@drawable/custom_background"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="10dp"
        >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/header">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logout"
            android:onClick="logOut"
            android:background="@drawable/ic_exit"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/water"
            android:textColor="@color/myWhite"
            android:textStyle="bold"
            android:id="@+id/AppName"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/details"
            android:onClick="profileOpen"
            android:background="@drawable/ic_person"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/settings" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/settings"
            android:onClick="settingsOpen"
            android:background="@drawable/ic_settings_special"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />
        </RelativeLayout>

    <com.github.lzyzsd.circleprogress.ArcProgress
        android:id="@+id/arc_progress_water"
        android:layout_width="150dp"
        android:layout_height="150dp"
        custom:arc_progress="0"
        custom:arc_max="100"
        custom:arc_stroke_width="3dp"
        custom:arc_bottom_text="Water Goal"
        custom:arc_bottom_text_size="10sp"
        custom:arc_suffix_text_size="15dp"
        custom:arc_suffix_text_padding="3dp"
        custom:arc_finished_color="@color/accent"
        custom:arc_unfinished_color="@color/myTransparentWhite"
        custom:arc_text_size="20sp"
        custom:arc_text_color="@color/myWhite"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="0 / 12"
            android:textColor="@color/myWhite"
            android:textStyle="bold"
            android:id="@+id/daily_total_water"
            android:layout_below="@+id/arc_progress_water"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.water.waterreminder.secretText.SecretTextView
                android:id="@+id/secretText"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/water_consumption"
                android:textSize="20sp"
                android:textColor="@color/myTextBlack"
                android:layout_marginTop="37dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <com.water.waterreminder.secretText.SecretTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/default_cup"
                android:id="@+id/secretText2"
                android:textColor="@color/mySkyBlueLight"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginRight="20dp"
                android:layout_alignTop="@+id/secretText"
                android:layout_alignParentEnd="true" />


            <android.support.design.widget.FloatingActionButton
                android:id="@+id/info_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_alignTop="@+id/fab_complete"
                android:layout_alignEnd="@+id/secretText2"
                android:layout_marginTop="5dp"
                android:visibility="invisible"
                app:backgroundTint="@color/myWhite"
                app:fabSize="mini"
                custom:rippleColor="@color/mySkyBlueLight"
                android:src="@drawable/info" />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:animateLayoutChanges="true"
                android:id="@+id/fab_complete"
                android:layout_width="wrap_content"
                android:visibility="invisible"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/primary"
                fab:fab_icon="@drawable/ic_add_typed"
                fab:fab_size="mini"
                fab:fab_colorPressed="@color/mySkyBlueLight"
                android:layout_marginTop="73dp"
                android:layout_marginStart="65dp"
                />
            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="145dp"
                android:layout_alignParentBottom="true"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tographs"
                android:id="@+id/btngrph"
                android:onClick="toGraphs"
                android:layout_above="@+id/chart"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </LinearLayout>



    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/floatActionMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        fab:fab_addButtonColorNormal="@color/primary"
        fab:fab_addButtonColorPressed="@color/mySkyBlueLight"
        fab:fab_addButtonPlusIconColor="@color/accent"
        fab:fab_addButtonStrokeVisible="false"
        fab:fab_expandDirection="down"
        android:layout_marginTop="265dp"
        >

    <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_icon="@drawable/ic_minus_black"
            fab:fab_size="mini"
            fab:fab_colorNormal="@color/primary"
            fab:fab_colorPressed="@color/mySkyBlueLight"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/primary"
            fab:fab_icon="@drawable/ic_add_black"
            fab:fab_size="mini"
            fab:fab_colorPressed="@color/mySkyBlueLight"/>

    </com.getbase.floatingactionbutton.FloatingActionsMenu>


</android.support.design.widget.CoordinatorLayout>
